syntax = "proto3";

option csharp_namespace = "Gateway.gRPC.Client.MercadoLivreProto";

service MercadoLivre {
	rpc AddNewAccount (GrpcAddAccountReq) returns (GrpcStatusResponse);
	rpc GetAppId (GrpcVoid) returns (GrpcStringResponse);
	rpc GetAppToken (GrpcVoid) returns (GrpcStringResponse);
	rpc GetAccountById (GrpcGetByIdReq) returns (GrpcAccount);
	rpc SearchAccounts (GrpcSearchAccountsReq) returns (GrpcAccountList);
}

message GrpcAddAccountReq {
	string name = 1;
	string description = 2;
	string owner = 3;
	string authCode = 4;
}


message GrpcSearchAccountsReq {
	GrpcPaginationIn Pagination = 1;
	string name = 2;
	string owner = 3;
}

message GrpcGetByIdReq {
	string id = 1;
}

// responses

message GrpcStatusResponse {
	bool ok = 1;
	string message = 2;
}

message GrpcStringResponse {
	string data = 1;
}

message GrpcVoid {

}

// models

message GrpcAccount {
	string id = 1;
	string name = 2;
	string description = 3;
	string owner = 4;
	bool is_synced = 5;
	string last_synced_at = 6;
	string added_at = 7;
}

message GrpcAccountList {
	repeated GrpcAccount Accounts = 1;
	GrpcPaginationOut Pagination = 2;
}

message GrpcPaginationOut {
	int32 Offset = 1;
	int32 Limit = 2;
	int32 Total = 3;
}

message GrpcPaginationIn {
	int32 Offset = 1;
	int32 Limit = 2;
}